Forgot to set SPI to increment read/write addresses.  Which would be helpful...
Signed-off-by: Anthony Clay <anthony.clay@zarthcode.com>

--- a/Configuration/Configuration.ioc
+++ b/Configuration/Configuration.ioc
@@ -1,5 +1,5 @@
 #MicroXplorer Configuration settings - do not modify
-#Wed Aug 27 09:12:56 CDT 2014
+#Tue Sep 02 06:02:51 CDT 2014
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_10
 ADC1.IPParameters=Channel-0\#ChannelRegularConversion,master,NbrOfConversionFlag
 ADC1.NbrOfConversionFlag=1
@@ -23,10 +23,10 @@ Dma.SPI1_RX.10.Direction=DMA_PERIPH_TO_MEMORY
 Dma.SPI1_RX.10.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.SPI1_RX.10.Instance=DMA2_Stream2
 Dma.SPI1_RX.10.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI1_RX.10.MemInc=DMA_MINC_DISABLE
+Dma.SPI1_RX.10.MemInc=DMA_MINC_ENABLE
 Dma.SPI1_RX.10.Mode=DMA_NORMAL
 Dma.SPI1_RX.10.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI1_RX.10.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI1_RX.10.PeriphInc=DMA_PINC_ENABLE
 Dma.SPI1_RX.10.Priority=DMA_PRIORITY_HIGH
 Dma.SPI1_RX.10.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.SPI2_RX.8.Channel=DMA_CHANNEL_0
@@ -34,10 +34,10 @@ Dma.SPI2_RX.8.Direction=DMA_PERIPH_TO_MEMORY
 Dma.SPI2_RX.8.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.SPI2_RX.8.Instance=DMA1_Stream3
 Dma.SPI2_RX.8.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI2_RX.8.MemInc=DMA_MINC_DISABLE
+Dma.SPI2_RX.8.MemInc=DMA_MINC_ENABLE
 Dma.SPI2_RX.8.Mode=DMA_NORMAL
 Dma.SPI2_RX.8.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI2_RX.8.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI2_RX.8.PeriphInc=DMA_PINC_ENABLE
 Dma.SPI2_RX.8.Priority=DMA_PRIORITY_MEDIUM
 Dma.SPI2_RX.8.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.SPI2_TX.9.Channel=DMA_CHANNEL_0
@@ -56,10 +56,10 @@ Dma.SPI3_RX.6.Direction=DMA_PERIPH_TO_MEMORY
 Dma.SPI3_RX.6.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.SPI3_RX.6.Instance=DMA1_Stream0
 Dma.SPI3_RX.6.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI3_RX.6.MemInc=DMA_MINC_DISABLE
+Dma.SPI3_RX.6.MemInc=DMA_MINC_ENABLE
 Dma.SPI3_RX.6.Mode=DMA_NORMAL
 Dma.SPI3_RX.6.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI3_RX.6.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI3_RX.6.PeriphInc=DMA_PINC_ENABLE
 Dma.SPI3_RX.6.Priority=DMA_PRIORITY_MEDIUM
 Dma.SPI3_RX.6.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.SPI3_TX.7.Channel=DMA_CHANNEL_0
@@ -78,10 +78,10 @@ Dma.SPI4_RX.4.Direction=DMA_PERIPH_TO_MEMORY
 Dma.SPI4_RX.4.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.SPI4_RX.4.Instance=DMA2_Stream0
 Dma.SPI4_RX.4.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI4_RX.4.MemInc=DMA_MINC_DISABLE
+Dma.SPI4_RX.4.MemInc=DMA_MINC_ENABLE
 Dma.SPI4_RX.4.Mode=DMA_NORMAL
 Dma.SPI4_RX.4.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI4_RX.4.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI4_RX.4.PeriphInc=DMA_PINC_ENABLE
 Dma.SPI4_RX.4.Priority=DMA_PRIORITY_MEDIUM
 Dma.SPI4_RX.4.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.SPI4_TX.5.Channel=DMA_CHANNEL_4
@@ -100,10 +100,10 @@ Dma.SPI5_RX.3.Direction=DMA_PERIPH_TO_MEMORY
 Dma.SPI5_RX.3.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.SPI5_RX.3.Instance=DMA2_Stream3
 Dma.SPI5_RX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI5_RX.3.MemInc=DMA_MINC_DISABLE
+Dma.SPI5_RX.3.MemInc=DMA_MINC_ENABLE
 Dma.SPI5_RX.3.Mode=DMA_NORMAL
 Dma.SPI5_RX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI5_RX.3.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI5_RX.3.PeriphInc=DMA_PINC_ENABLE
 Dma.SPI5_RX.3.Priority=DMA_PRIORITY_HIGH
 Dma.SPI5_RX.3.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.SPI5_TX.2.Channel=DMA_CHANNEL_2
@@ -111,10 +111,10 @@ Dma.SPI5_TX.2.Direction=DMA_MEMORY_TO_PERIPH
 Dma.SPI5_TX.2.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.SPI5_TX.2.Instance=DMA2_Stream4
 Dma.SPI5_TX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI5_TX.2.MemInc=DMA_MINC_DISABLE
+Dma.SPI5_TX.2.MemInc=DMA_MINC_ENABLE
 Dma.SPI5_TX.2.Mode=DMA_NORMAL
 Dma.SPI5_TX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI5_TX.2.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI5_TX.2.PeriphInc=DMA_PINC_ENABLE
 Dma.SPI5_TX.2.Priority=DMA_PRIORITY_MEDIUM
 Dma.SPI5_TX.2.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.SPI6_RX.0.Channel=DMA_CHANNEL_1
@@ -122,10 +122,10 @@ Dma.SPI6_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.SPI6_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.SPI6_RX.0.Instance=DMA2_Stream6
 Dma.SPI6_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI6_RX.0.MemInc=DMA_MINC_DISABLE
+Dma.SPI6_RX.0.MemInc=DMA_MINC_ENABLE
 Dma.SPI6_RX.0.Mode=DMA_NORMAL
 Dma.SPI6_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI6_RX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI6_RX.0.PeriphInc=DMA_PINC_ENABLE
 Dma.SPI6_RX.0.Priority=DMA_PRIORITY_HIGH
 Dma.SPI6_RX.0.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.SPI6_TX.1.Channel=DMA_CHANNEL_1
@@ -133,10 +133,10 @@ Dma.SPI6_TX.1.Direction=DMA_MEMORY_TO_PERIPH
 Dma.SPI6_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.SPI6_TX.1.Instance=DMA2_Stream5
 Dma.SPI6_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI6_TX.1.MemInc=DMA_MINC_DISABLE
+Dma.SPI6_TX.1.MemInc=DMA_MINC_ENABLE
 Dma.SPI6_TX.1.Mode=DMA_NORMAL
 Dma.SPI6_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI6_TX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI6_TX.1.PeriphInc=DMA_PINC_ENABLE
 Dma.SPI6_TX.1.Priority=DMA_PRIORITY_MEDIUM
 Dma.SPI6_TX.1.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.USART2_RX.12.Channel=DMA_CHANNEL_4
@@ -155,10 +155,10 @@ Dma.USART2_TX.11.Direction=DMA_MEMORY_TO_PERIPH
 Dma.USART2_TX.11.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.USART2_TX.11.Instance=DMA1_Stream6
 Dma.USART2_TX.11.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART2_TX.11.MemInc=DMA_MINC_DISABLE
+Dma.USART2_TX.11.MemInc=DMA_MINC_ENABLE
 Dma.USART2_TX.11.Mode=DMA_NORMAL
 Dma.USART2_TX.11.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART2_TX.11.PeriphInc=DMA_PINC_DISABLE
+Dma.USART2_TX.11.PeriphInc=DMA_PINC_ENABLE
 Dma.USART2_TX.11.Priority=DMA_PRIORITY_VERY_HIGH
 Dma.USART2_TX.11.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=4
@@ -697,7 +697,7 @@ RCC.APB2CLKDivider=RCC_HCLK_DIV2
 RCC.FamilyName=M
 RCC.HSE_VALUE=25000000
 RCC.HSI_VALUE=16000000
-RCC.IPParameters=,FamilyName,APB2CLKDivider,LSE_VALUE,SYSCLKSource,APB1CLKDivider,PLLN,HSE_VALUE,HSI_VALUE,PLLQ,LSI_VALUE,RCC_MCO1Source,RCC_MCODiv1
+RCC.IPParameters=,FamilyName,APB2CLKDivider,LSE_VALUE,SYSCLKSource,APB1CLKDivider,PLLN,HSE_VALUE,HSI_VALUE,PLLQ,LSI_VALUE,RCC_MCODiv1,RCC_MCO1Source
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
 RCC.PLLN=336
@@ -745,37 +745,37 @@ SPI1.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_16
 SPI1.CLKPhase-Full_Duplex_Master=SPI_PHASE_2EDGE
 SPI1.CLKPolarity-Full_Duplex_Master=SPI_POLARITY_HIGH
 SPI1.CalculateBaudRate-Full_Duplex_Master=5.25 MBits/s
-SPI1.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
+SPI1.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
 SPI1.Mode-Full_Duplex_Master=SPI_MODE_MASTER
 SPI2.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_8
 SPI2.CLKPhase-Full_Duplex_Master=SPI_PHASE_2EDGE
 SPI2.CLKPolarity-Full_Duplex_Master=SPI_POLARITY_HIGH
 SPI2.CalculateBaudRate-Full_Duplex_Master=5.25 MBits/s
-SPI2.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
+SPI2.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
 SPI2.Mode-Full_Duplex_Master=SPI_MODE_MASTER
 SPI3.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_8
 SPI3.CLKPhase-Full_Duplex_Master=SPI_PHASE_2EDGE
 SPI3.CLKPolarity-Full_Duplex_Master=SPI_POLARITY_HIGH
 SPI3.CalculateBaudRate-Full_Duplex_Master=5.25 MBits/s
-SPI3.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
+SPI3.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
 SPI3.Mode-Full_Duplex_Master=SPI_MODE_MASTER
 SPI4.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_16
 SPI4.CLKPhase-Full_Duplex_Master=SPI_PHASE_2EDGE
 SPI4.CLKPolarity-Full_Duplex_Master=SPI_POLARITY_HIGH
 SPI4.CalculateBaudRate-Full_Duplex_Master=5.25 MBits/s
-SPI4.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
+SPI4.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
 SPI4.Mode-Full_Duplex_Master=SPI_MODE_MASTER
 SPI5.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_16
 SPI5.CLKPhase-Full_Duplex_Master=SPI_PHASE_2EDGE
 SPI5.CLKPolarity-Full_Duplex_Master=SPI_POLARITY_HIGH
 SPI5.CalculateBaudRate-Full_Duplex_Master=5.25 MBits/s
-SPI5.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
+SPI5.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
 SPI5.Mode-Full_Duplex_Master=SPI_MODE_MASTER
 SPI6.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_16
 SPI6.CLKPhase-Full_Duplex_Master=SPI_PHASE_2EDGE
 SPI6.CLKPolarity-Full_Duplex_Master=SPI_POLARITY_HIGH
 SPI6.CalculateBaudRate-Full_Duplex_Master=5.25 MBits/s
-SPI6.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
+SPI6.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
 SPI6.Mode-Full_Duplex_Master=SPI_MODE_MASTER
 TIM1.AutomaticOutput=TIM_AUTOMATICOUTPUT_DISABLE
 TIM1.BreakPolarity=TIM_BREAKPOLARITY_LOW
@@ -784,7 +784,7 @@ TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM1.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM1.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
 TIM1.ClockDivision=TIM_CLOCKDIVISION_DIV4
-TIM1.IPParameters=Pulse-PWM Generation1 CH1,OffStateIDLEMode,OCIdleState_1-PWM Generation1 CH1,TIM_MasterSlaveMode,Period,Prescaler,OffStateRunMode,Channel-PWM Generation4 CH4,BreakPolarity,AutomaticOutput,OCPolarity_4-PWM Generation4 CH4,BreakState,TIM_MasterOutputTrigger,OCPolarity_2-PWM Generation2 CH2,Pulse-PWM Generation4 CH4,Pulse-PWM Generation3 CH3,ClockDivision,OCIdleState_3-PWM Generation3 CH3,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,OCPolarity_1-PWM Generation1 CH1,OCPolarity_3-PWM Generation3 CH3,OCIdleState_4-PWM Generation4 CH4,Pulse-PWM Generation2 CH2,OCIdleState_2-PWM Generation2 CH2
+TIM1.IPParameters=Pulse-PWM Generation1 CH1,OffStateIDLEMode,OCIdleState_1-PWM Generation1 CH1,TIM_MasterSlaveMode,Period,Prescaler,OffStateRunMode,Channel-PWM Generation4 CH4,AutomaticOutput,BreakPolarity,BreakState,OCPolarity_4-PWM Generation4 CH4,TIM_MasterOutputTrigger,OCPolarity_2-PWM Generation2 CH2,Pulse-PWM Generation4 CH4,Pulse-PWM Generation3 CH3,ClockDivision,Channel-PWM Generation2 CH2,OCIdleState_3-PWM Generation3 CH3,Channel-PWM Generation3 CH3,OCPolarity_1-PWM Generation1 CH1,OCPolarity_3-PWM Generation3 CH3,OCIdleState_4-PWM Generation4 CH4,Pulse-PWM Generation2 CH2,OCIdleState_2-PWM Generation2 CH2
 TIM1.OCIdleState_1-PWM\ Generation1\ CH1=TIM_OCIDLESTATE_SET
 TIM1.OCIdleState_2-PWM\ Generation2\ CH2=TIM_OCIDLESTATE_SET
 TIM1.OCIdleState_3-PWM\ Generation3\ CH3=TIM_OCIDLESTATE_SET
@@ -845,7 +845,7 @@ TIM5.Pulse-PWM\ Generation3\ CH3=500
 TIM8.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM8.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM8.ClockDivision=TIM_CLOCKDIVISION_DIV4
-TIM8.IPParameters=Pulse-PWM Generation1 CH1,OCIdleState_1-PWM Generation1 CH1,Period,Prescaler,OCPolarity_2-PWM Generation2 CH2,Pulse-PWM Generation3 CH3,ClockDivision,Channel-PWM Generation2 CH2,OCIdleState_3-PWM Generation3 CH3,Channel-PWM Generation3 CH3,OCPolarity_1-PWM Generation1 CH1,OCPolarity_3-PWM Generation3 CH3,Pulse-PWM Generation2 CH2,OCIdleState_2-PWM Generation2 CH2
+TIM8.IPParameters=Pulse-PWM Generation1 CH1,OCIdleState_1-PWM Generation1 CH1,Period,Prescaler,OCPolarity_2-PWM Generation2 CH2,Pulse-PWM Generation3 CH3,ClockDivision,OCIdleState_3-PWM Generation3 CH3,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,OCPolarity_1-PWM Generation1 CH1,OCPolarity_3-PWM Generation3 CH3,Pulse-PWM Generation2 CH2,OCIdleState_2-PWM Generation2 CH2
 TIM8.OCIdleState_1-PWM\ Generation1\ CH1=TIM_OCIDLESTATE_SET
 TIM8.OCIdleState_2-PWM\ Generation2\ CH2=TIM_OCIDLESTATE_SET
 TIM8.OCIdleState_3-PWM\ Generation3\ CH3=TIM_OCIDLESTATE_SET
