Yet another configuration correction.

--- a/Configuration/Configuration.ioc
+++ b/Configuration/Configuration.ioc
@@ -1,5 +1,5 @@
 #MicroXplorer Configuration settings - do not modify
-#Thu Sep 11 12:01:21 CDT 2014
+#Fri Sep 12 02:59:48 CDT 2014
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_10
 ADC1.IPParameters=Channel-0\#ChannelRegularConversion,master,NbrOfConversionFlag
 ADC1.NbrOfConversionFlag=1
@@ -324,10 +324,16 @@ PA14.Mode=JTAG(4-pin)
 PA14.Signal=SYS_JTCK-SWCLK
 PA15.Mode=JTAG(4-pin)
 PA15.Signal=SYS_JTDI
+PA3.GPIOParameters=GPIO_PuPd,GPIO_Mode
+PA3.GPIO_Mode=GPIO_MODE_INPUT
+PA3.GPIO_PuPd=GPIO_PULLDOWN
 PA3.Locked=true
-PA3.Signal=GPIO_Output
+PA3.Signal=GPIO_Input
+PA4.GPIOParameters=GPIO_PuPd,GPIO_Mode
+PA4.GPIO_Mode=GPIO_MODE_INPUT
+PA4.GPIO_PuPd=GPIO_PULLDOWN
 PA4.Locked=true
-PA4.Signal=GPIO_Output
+PA4.Signal=GPIO_Input
 PA5.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
 PA5.GPIO_Mode=GPIO_MODE_AF_PP
 PA5.GPIO_PuPd=GPIO_NOPULL
@@ -372,12 +378,28 @@ PB15.Mode=Full_Duplex_Master
 PB15.Signal=SPI2_MOSI
 PB3.Mode=JTAG(4-pin)
 PB3.Signal=SYS_JTDO-SWO
+PB4.GPIOParameters=GPIO_ModeDefaultOutputPP,GPIO_Speed,GPIO_PuPd
+PB4.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PB4.GPIO_PuPd=GPIO_PULLUP
+PB4.GPIO_Speed=GPIO_SPEED_LOW
 PB4.Locked=true
 PB4.Signal=GPIO_Output
+PB5.GPIOParameters=GPIO_ModeDefaultOutputPP,GPIO_Speed,GPIO_PuPd
+PB5.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PB5.GPIO_PuPd=GPIO_PULLUP
+PB5.GPIO_Speed=GPIO_SPEED_LOW
 PB5.Locked=true
 PB5.Signal=GPIO_Output
+PB8.GPIOParameters=GPIO_ModeDefaultOutputPP,GPIO_Speed,GPIO_PuPd
+PB8.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PB8.GPIO_PuPd=GPIO_PULLUP
+PB8.GPIO_Speed=GPIO_SPEED_LOW
 PB8.Locked=true
 PB8.Signal=GPIO_Output
+PB9.GPIOParameters=GPIO_ModeDefaultOutputPP,GPIO_Speed,GPIO_PuPd
+PB9.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PB9.GPIO_PuPd=GPIO_PULLUP
+PB9.GPIO_Speed=GPIO_SPEED_LOW
 PB9.Locked=true
 PB9.Signal=GPIO_Output
 PC0.Signal=ADCx_IN10
@@ -401,6 +423,9 @@ PC12.GPIO_PuPd=GPIO_NOPULL
 PC12.GPIO_Speed=GPIO_SPEED_MEDIUM
 PC12.Mode=Full_Duplex_Master
 PC12.Signal=SPI3_MOSI
+PC13.GPIOParameters=GPIO_PuPd,GPIO_Mode
+PC13.GPIO_Mode=GPIO_MODE_INPUT
+PC13.GPIO_PuPd=GPIO_PULLDOWN
 PC13.Locked=true
 PC13.Signal=GPIO_Input
 PC6.GPIOParameters=GPIO_Label,GPIO_Speed,GPIO_ModeDefaultPP,GPIO_PuPd
@@ -457,12 +482,26 @@ PCC.Seq0.Step0.Vcore=Scale1-High
 PCC.SubFamily=STM32F427/437
 PCC.Temperature=25
 PCC.Vdd=3.3
+PD0.GPIOParameters=GPIO_ModeDefaultOutputPP,GPIO_Speed,GPIO_PuPd
+PD0.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PD0.GPIO_PuPd=GPIO_PULLUP
+PD0.GPIO_Speed=GPIO_SPEED_LOW
 PD0.Locked=true
 PD0.Signal=GPIO_Output
+PD1.GPIOParameters=GPIO_ModeDefaultOutputPP,GPIO_Speed,GPIO_PuPd
+PD1.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PD1.GPIO_PuPd=GPIO_PULLUP
+PD1.GPIO_Speed=GPIO_SPEED_LOW
 PD1.Locked=true
 PD1.Signal=GPIO_Output
+PD10.GPIOParameters=GPIO_PuPd,GPIO_Mode
+PD10.GPIO_Mode=GPIO_MODE_INPUT
+PD10.GPIO_PuPd=GPIO_PULLDOWN
 PD10.Locked=true
 PD10.Signal=GPIO_Input
+PD11.GPIOParameters=GPIO_PuPd,GPIO_Mode
+PD11.GPIO_Mode=GPIO_MODE_INPUT
+PD11.GPIO_PuPd=GPIO_PULLDOWN
 PD11.Locked=true
 PD11.Signal=GPIO_Input
 PD12.GPIOParameters=GPIO_Label,GPIO_Speed,GPIO_ModeDefaultPP,GPIO_PuPd
@@ -483,6 +522,9 @@ PD14.GPIO_ModeDefaultPP=GPIO_MODE_AF_OD
 PD14.GPIO_PuPd=GPIO_PULLUP
 PD14.GPIO_Speed=GPIO_SPEED_LOW
 PD14.Signal=S_TIM4_CH3
+PD2.GPIOParameters=GPIO_PuPd,GPIO_Mode
+PD2.GPIO_Mode=GPIO_MODE_INPUT
+PD2.GPIO_PuPd=GPIO_PULLDOWN
 PD2.Locked=true
 PD2.Signal=GPIO_Input
 PD3.Mode=CTS_RTS
@@ -493,14 +535,31 @@ PD5.Mode=Asynchronous
 PD5.Signal=USART2_TX
 PD6.Mode=Asynchronous
 PD6.Signal=USART2_RX
+PD7.GPIOParameters=GPIO_PuPd,GPIO_Mode
+PD7.GPIO_Mode=GPIO_MODE_INPUT
+PD7.GPIO_PuPd=GPIO_PULLDOWN
 PD7.Locked=true
 PD7.Signal=GPIO_Input
+PD8.GPIOParameters=GPIO_ModeDefaultOutputPP,GPIO_Speed,GPIO_PuPd
+PD8.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PD8.GPIO_PuPd=GPIO_PULLUP
+PD8.GPIO_Speed=GPIO_SPEED_LOW
 PD8.Locked=true
 PD8.Signal=GPIO_Output
+PD9.GPIOParameters=GPIO_ModeDefaultOutputPP,GPIO_Speed,GPIO_PuPd
+PD9.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PD9.GPIO_PuPd=GPIO_PULLUP
+PD9.GPIO_Speed=GPIO_SPEED_LOW
 PD9.Locked=true
 PD9.Signal=GPIO_Output
+PE0.GPIOParameters=GPIO_PuPd,GPIO_Mode
+PE0.GPIO_Mode=GPIO_MODE_INPUT
+PE0.GPIO_PuPd=GPIO_PULLDOWN
 PE0.Locked=true
 PE0.Signal=GPIO_Input
+PE1.GPIOParameters=GPIO_PuPd,GPIO_Mode
+PE1.GPIO_Mode=GPIO_MODE_INPUT
+PE1.GPIO_PuPd=GPIO_PULLDOWN
 PE1.Locked=true
 PE1.Signal=GPIO_Input
 PE11.GPIOParameters=GPIO_Label,GPIO_Speed,GPIO_ModeDefaultPP,GPIO_PuPd
@@ -527,10 +586,16 @@ PE2.GPIO_PuPd=GPIO_NOPULL
 PE2.GPIO_Speed=GPIO_SPEED_MEDIUM
 PE2.Mode=Full_Duplex_Master
 PE2.Signal=SPI4_SCK
+PE3.GPIOParameters=GPIO_PuPd,GPIO_Mode
+PE3.GPIO_Mode=GPIO_MODE_INPUT
+PE3.GPIO_PuPd=GPIO_PULLDOWN
 PE3.Locked=true
-PE3.Signal=GPIO_Output
+PE3.Signal=GPIO_Input
+PE4.GPIOParameters=GPIO_PuPd,GPIO_Mode
+PE4.GPIO_Mode=GPIO_MODE_INPUT
+PE4.GPIO_PuPd=GPIO_PULLDOWN
 PE4.Locked=true
-PE4.Signal=GPIO_Output
+PE4.Signal=GPIO_Input
 PE5.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
 PE5.GPIO_Mode=GPIO_MODE_AF_PP
 PE5.GPIO_PuPd=GPIO_NOPULL
@@ -553,18 +618,38 @@ PF0.Mode=I2C
 PF0.Signal=I2C2_SDA
 PF1.Mode=I2C
 PF1.Signal=I2C2_SCL
+PF10.GPIOParameters=GPIO_PuPd,GPIO_Mode
+PF10.GPIO_Mode=GPIO_MODE_INPUT
+PF10.GPIO_PuPd=GPIO_PULLDOWN
 PF10.Locked=true
-PF10.Signal=GPIO_Output
+PF10.Signal=GPIO_Input
+PF2.GPIOParameters=GPIO_ModeDefaultOutputPP,GPIO_Speed,GPIO_PuPd
+PF2.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PF2.GPIO_PuPd=GPIO_PULLUP
+PF2.GPIO_Speed=GPIO_SPEED_LOW
 PF2.Locked=true
 PF2.Signal=GPIO_Output
+PF3.GPIOParameters=GPIO_ModeDefaultOutputPP,GPIO_Speed,GPIO_PuPd
+PF3.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PF3.GPIO_PuPd=GPIO_PULLUP
+PF3.GPIO_Speed=GPIO_SPEED_LOW
 PF3.Locked=true
 PF3.Signal=GPIO_Output
+PF4.GPIOParameters=GPIO_PuPd,GPIO_Mode
+PF4.GPIO_Mode=GPIO_MODE_INPUT
+PF4.GPIO_PuPd=GPIO_PULLDOWN
 PF4.Locked=true
 PF4.Signal=GPIO_Input
+PF5.GPIOParameters=GPIO_PuPd,GPIO_Mode
+PF5.GPIO_Mode=GPIO_MODE_INPUT
+PF5.GPIO_PuPd=GPIO_PULLDOWN
 PF5.Locked=true
 PF5.Signal=GPIO_Input
+PF6.GPIOParameters=GPIO_PuPd,GPIO_Mode
+PF6.GPIO_Mode=GPIO_MODE_INPUT
+PF6.GPIO_PuPd=GPIO_PULLDOWN
 PF6.Locked=true
-PF6.Signal=GPIO_Output
+PF6.Signal=GPIO_Input
 PF7.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
 PF7.GPIO_Mode=GPIO_MODE_AF_PP
 PF7.GPIO_PuPd=GPIO_NOPULL
@@ -583,8 +668,14 @@ PF9.GPIO_PuPd=GPIO_NOPULL
 PF9.GPIO_Speed=GPIO_SPEED_MEDIUM
 PF9.Mode=Full_Duplex_Master
 PF9.Signal=SPI5_MOSI
+PG10.GPIOParameters=GPIO_PuPd,GPIO_Mode
+PG10.GPIO_Mode=GPIO_MODE_INPUT
+PG10.GPIO_PuPd=GPIO_PULLDOWN
 PG10.Locked=true
 PG10.Signal=GPIO_Input
+PG11.GPIOParameters=GPIO_PuPd,GPIO_Mode
+PG11.GPIO_Mode=GPIO_MODE_INPUT
+PG11.GPIO_PuPd=GPIO_PULLDOWN
 PG11.Locked=true
 PG11.Signal=GPIO_Input
 PG12.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
@@ -610,10 +701,19 @@ PG15.GPIO_Mode=GPIO_MODE_INPUT
 PG15.GPIO_PuPd=GPIO_PULLUP
 PG15.Locked=true
 PG15.Signal=GPIO_Input
+PG2.GPIOParameters=GPIO_PuPd,GPIO_Mode
+PG2.GPIO_Mode=GPIO_MODE_INPUT
+PG2.GPIO_PuPd=GPIO_PULLDOWN
 PG2.Locked=true
-PG2.Signal=GPIO_Output
+PG2.Signal=GPIO_Input
+PG3.GPIOParameters=GPIO_PuPd,GPIO_Mode
+PG3.GPIO_Mode=GPIO_MODE_INPUT
+PG3.GPIO_PuPd=GPIO_PULLDOWN
 PG3.Locked=true
-PG3.Signal=GPIO_Output
+PG3.Signal=GPIO_Input
+PG9.GPIOParameters=GPIO_PuPd,GPIO_Mode
+PG9.GPIO_Mode=GPIO_MODE_INPUT
+PG9.GPIO_PuPd=GPIO_PULLDOWN
 PG9.Locked=true
 PG9.Signal=GPIO_Input
 PH0/OSC_IN.Mode=HSE-External-Oscillator
@@ -640,18 +740,41 @@ PH12.GPIO_PuPd=GPIO_PULLUP
 PH12.GPIO_Speed=GPIO_SPEED_LOW
 PH12.Locked=true
 PH12.Signal=S_TIM5_CH3
+PH13.GPIOParameters=GPIO_PuPd,GPIO_Mode
+PH13.GPIO_Mode=GPIO_MODE_INPUT
+PH13.GPIO_PuPd=GPIO_PULLDOWN
 PH13.Locked=true
 PH13.Signal=GPIO_Input
+PH14.GPIOParameters=GPIO_PuPd,GPIO_Mode
+PH14.GPIO_Mode=GPIO_MODE_INPUT
+PH14.GPIO_PuPd=GPIO_PULLDOWN
 PH14.Locked=true
 PH14.Signal=GPIO_Input
+PH15.GPIOParameters=GPIO_PuPd,GPIO_Mode
+PH15.GPIO_Mode=GPIO_MODE_INPUT
+PH15.GPIO_PuPd=GPIO_PULLDOWN
 PH15.Locked=true
 PH15.Signal=GPIO_Input
+PH2.GPIOParameters=GPIO_ModeDefaultOutputPP,GPIO_Speed,GPIO_PuPd
+PH2.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PH2.GPIO_PuPd=GPIO_PULLUP
+PH2.GPIO_Speed=GPIO_SPEED_LOW
 PH2.Locked=true
 PH2.Signal=GPIO_Output
+PH3.GPIOParameters=GPIO_ModeDefaultOutputPP,GPIO_Speed,GPIO_PuPd
+PH3.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PH3.GPIO_PuPd=GPIO_PULLUP
+PH3.GPIO_Speed=GPIO_SPEED_LOW
 PH3.Locked=true
 PH3.Signal=GPIO_Output
+PH4.GPIOParameters=GPIO_PuPd,GPIO_Mode
+PH4.GPIO_Mode=GPIO_MODE_INPUT
+PH4.GPIO_PuPd=GPIO_PULLDOWN
 PH4.Locked=true
 PH4.Signal=GPIO_Input
+PH5.GPIOParameters=GPIO_PuPd,GPIO_Mode
+PH5.GPIO_Mode=GPIO_MODE_INPUT
+PH5.GPIO_PuPd=GPIO_PULLDOWN
 PH5.Locked=true
 PH5.Signal=GPIO_Input
 PH7.Mode=I2C
@@ -661,17 +784,24 @@ PH8.Signal=I2C3_SDA
 PI1.Locked=true
 PI1.Signal=GPIO_Output
 PI10.GPIOParameters=GPIO_ModeDefaultOutputPP,GPIO_Speed,GPIO_PuPd
-PI10.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
-PI10.GPIO_PuPd=GPIO_NOPULL
+PI10.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PI10.GPIO_PuPd=GPIO_PULLUP
 PI10.GPIO_Speed=GPIO_SPEED_LOW
 PI10.Locked=true
 PI10.Signal=GPIO_Output
+PI11.GPIOParameters=GPIO_ModeDefaultOutputPP,GPIO_Speed,GPIO_PuPd
+PI11.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PI11.GPIO_PuPd=GPIO_PULLUP
+PI11.GPIO_Speed=GPIO_SPEED_LOW
 PI11.Locked=true
 PI11.Signal=GPIO_Output
 PI3.Locked=true
 PI3.Signal=GPIO_Input
+PI4.GPIOParameters=GPIO_PuPd,GPIO_Mode
+PI4.GPIO_Mode=GPIO_MODE_INPUT
+PI4.GPIO_PuPd=GPIO_PULLDOWN
 PI4.Locked=true
-PI4.Signal=GPIO_Output
+PI4.Signal=GPIO_Input
 PI5.GPIOParameters=GPIO_Speed,GPIO_ModeDefaultPP,GPIO_PuPd
 PI5.GPIO_ModeDefaultPP=GPIO_MODE_AF_OD
 PI5.GPIO_PuPd=GPIO_PULLUP
@@ -688,8 +818,14 @@ PI7.GPIO_PuPd=GPIO_PULLUP
 PI7.GPIO_Speed=GPIO_SPEED_LOW
 PI7.Locked=true
 PI7.Signal=S_TIM8_CH3
+PI8.GPIOParameters=GPIO_PuPd,GPIO_Mode
+PI8.GPIO_Mode=GPIO_MODE_INPUT
+PI8.GPIO_PuPd=GPIO_PULLDOWN
 PI8.Locked=true
-PI8.Signal=GPIO_Output
+PI8.Signal=GPIO_Input
+PI9.GPIOParameters=GPIO_PuPd,GPIO_Mode
+PI9.GPIO_Mode=GPIO_MODE_INPUT
+PI9.GPIO_PuPd=GPIO_PULLDOWN
 PI9.Locked=true
 PI9.Signal=GPIO_Input
 ProjectManager.AskForMigrate=true
