--- a/Configuration/Configuration.ioc
+++ b/Configuration/Configuration.ioc
@@ -1,5 +1,5 @@
 #MicroXplorer Configuration settings - do not modify
-#Fri Sep 12 03:06:02 CDT 2014
+#Sat Sep 13 00:00:32 CDT 2014
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_10
 ADC1.IPParameters=Channel-0\#ChannelRegularConversion,master,NbrOfConversionFlag
 ADC1.NbrOfConversionFlag=1
@@ -309,6 +309,7 @@ NVIC.DMA2_Stream4_IRQn=true\:1\:4
 NVIC.DMA2_Stream5_IRQn=true\:1\:4
 NVIC.DMA2_Stream6_IRQn=true\:1\:4
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_1
+NVIC.SPI1_IRQn=true\:1\:4
 NVIC.SysTick_IRQn=true\:0\:0
 PA0/WKUP.Mode=SYS-WakeUp
 PA0/WKUP.Signal=SYS_WKUP
@@ -465,7 +466,7 @@ PCC.Battery.NominalVoltage=3.7
 PCC.Battery.SelfDischarge=1.0
 PCC.Family=STM32F4
 PCC.MCU=STM32F427I(G-I)Tx
-PCC.MXVersion=4.3.1
+PCC.MXVersion=4.3.0
 PCC.PartNumber=STM32F427IGTx
 PCC.Seq0=1
 PCC.Seq0.Step0.Average_Current=139.53 mA
@@ -850,7 +851,7 @@ RCC.APB2CLKDivider=RCC_HCLK_DIV2
 RCC.FamilyName=M
 RCC.HSE_VALUE=25000000
 RCC.HSI_VALUE=16000000
-RCC.IPParameters=,FamilyName,APB2CLKDivider,LSE_VALUE,SYSCLKSource,APB1CLKDivider,VCOSAIOutputFreq_ValueR,PLLN,VcooutputI2SQ,HSE_VALUE,VCOSAIOutputFreq_ValueQ,HSI_VALUE,PLLQ,VcooutputI2S,LSI_VALUE,RCC_MCODiv1,RCC_MCO1Source
+RCC.IPParameters=,FamilyName,APB2CLKDivider,LSE_VALUE,SYSCLKSource,APB1CLKDivider,VCOSAIOutputFreq_ValueR,PLLN,VcooutputI2SQ,VCOSAIOutputFreq_ValueQ,HSE_VALUE,HSI_VALUE,PLLQ,VcooutputI2S,LSI_VALUE,RCC_MCO1Source,RCC_MCODiv1
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
 RCC.PLLN=336
@@ -898,41 +899,41 @@ SH.S_TIM8_CH2.0=TIM8_CH2,PWM Generation2 CH2
 SH.S_TIM8_CH2.ConfNb=1
 SH.S_TIM8_CH3.0=TIM8_CH3,PWM Generation3 CH3
 SH.S_TIM8_CH3.ConfNb=1
-SPI1.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_16
+SPI1.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_32
 SPI1.CLKPhase-Full_Duplex_Master=SPI_PHASE_2EDGE
 SPI1.CLKPolarity-Full_Duplex_Master=SPI_POLARITY_HIGH
-SPI1.CalculateBaudRate-Full_Duplex_Master=5.25 MBits/s
-SPI1.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
+SPI1.CalculateBaudRate-Full_Duplex_Master=2.625 MBits/s
+SPI1.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
 SPI1.Mode-Full_Duplex_Master=SPI_MODE_MASTER
-SPI2.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_8
+SPI2.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_16
 SPI2.CLKPhase-Full_Duplex_Master=SPI_PHASE_2EDGE
 SPI2.CLKPolarity-Full_Duplex_Master=SPI_POLARITY_HIGH
-SPI2.CalculateBaudRate-Full_Duplex_Master=5.25 MBits/s
-SPI2.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
+SPI2.CalculateBaudRate-Full_Duplex_Master=2.625 MBits/s
+SPI2.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
 SPI2.Mode-Full_Duplex_Master=SPI_MODE_MASTER
-SPI3.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_8
+SPI3.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_16
 SPI3.CLKPhase-Full_Duplex_Master=SPI_PHASE_2EDGE
 SPI3.CLKPolarity-Full_Duplex_Master=SPI_POLARITY_HIGH
-SPI3.CalculateBaudRate-Full_Duplex_Master=5.25 MBits/s
-SPI3.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
+SPI3.CalculateBaudRate-Full_Duplex_Master=2.625 MBits/s
+SPI3.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
 SPI3.Mode-Full_Duplex_Master=SPI_MODE_MASTER
-SPI4.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_16
+SPI4.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_32
 SPI4.CLKPhase-Full_Duplex_Master=SPI_PHASE_2EDGE
 SPI4.CLKPolarity-Full_Duplex_Master=SPI_POLARITY_HIGH
-SPI4.CalculateBaudRate-Full_Duplex_Master=5.25 MBits/s
-SPI4.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
+SPI4.CalculateBaudRate-Full_Duplex_Master=2.625 MBits/s
+SPI4.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
 SPI4.Mode-Full_Duplex_Master=SPI_MODE_MASTER
-SPI5.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_16
+SPI5.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_32
 SPI5.CLKPhase-Full_Duplex_Master=SPI_PHASE_2EDGE
 SPI5.CLKPolarity-Full_Duplex_Master=SPI_POLARITY_HIGH
-SPI5.CalculateBaudRate-Full_Duplex_Master=5.25 MBits/s
-SPI5.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
+SPI5.CalculateBaudRate-Full_Duplex_Master=2.625 MBits/s
+SPI5.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
 SPI5.Mode-Full_Duplex_Master=SPI_MODE_MASTER
-SPI6.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_16
+SPI6.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_32
 SPI6.CLKPhase-Full_Duplex_Master=SPI_PHASE_2EDGE
 SPI6.CLKPolarity-Full_Duplex_Master=SPI_POLARITY_HIGH
-SPI6.CalculateBaudRate-Full_Duplex_Master=5.25 MBits/s
-SPI6.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
+SPI6.CalculateBaudRate-Full_Duplex_Master=2.625 MBits/s
+SPI6.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
 SPI6.Mode-Full_Duplex_Master=SPI_MODE_MASTER
 TIM1.AutomaticOutput=TIM_AUTOMATICOUTPUT_DISABLE
 TIM1.BreakPolarity=TIM_BREAKPOLARITY_LOW
@@ -941,7 +942,7 @@ TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM1.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM1.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
 TIM1.ClockDivision=TIM_CLOCKDIVISION_DIV4
-TIM1.IPParameters=Pulse-PWM Generation1 CH1,OffStateIDLEMode,OCIdleState_1-PWM Generation1 CH1,TIM_MasterSlaveMode,Period,Prescaler,OffStateRunMode,Channel-PWM Generation4 CH4,AutomaticOutput,BreakPolarity,BreakState,OCPolarity_4-PWM Generation4 CH4,TIM_MasterOutputTrigger,OCPolarity_2-PWM Generation2 CH2,Pulse-PWM Generation4 CH4,Pulse-PWM Generation3 CH3,ClockDivision,Channel-PWM Generation2 CH2,OCIdleState_3-PWM Generation3 CH3,Channel-PWM Generation3 CH3,OCPolarity_1-PWM Generation1 CH1,OCPolarity_3-PWM Generation3 CH3,OCIdleState_4-PWM Generation4 CH4,Pulse-PWM Generation2 CH2,OCIdleState_2-PWM Generation2 CH2
+TIM1.IPParameters=Pulse-PWM Generation1 CH1,OffStateIDLEMode,OCIdleState_1-PWM Generation1 CH1,TIM_MasterSlaveMode,Period,Prescaler,OffStateRunMode,Channel-PWM Generation4 CH4,BreakPolarity,AutomaticOutput,OCPolarity_4-PWM Generation4 CH4,BreakState,TIM_MasterOutputTrigger,OCPolarity_2-PWM Generation2 CH2,Pulse-PWM Generation4 CH4,Pulse-PWM Generation3 CH3,ClockDivision,OCIdleState_3-PWM Generation3 CH3,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,OCPolarity_1-PWM Generation1 CH1,OCPolarity_3-PWM Generation3 CH3,OCIdleState_4-PWM Generation4 CH4,Pulse-PWM Generation2 CH2,OCIdleState_2-PWM Generation2 CH2
 TIM1.OCIdleState_1-PWM\ Generation1\ CH1=TIM_OCIDLESTATE_SET
 TIM1.OCIdleState_2-PWM\ Generation2\ CH2=TIM_OCIDLESTATE_SET
 TIM1.OCIdleState_3-PWM\ Generation3\ CH3=TIM_OCIDLESTATE_SET
@@ -1002,7 +1003,7 @@ TIM5.Pulse-PWM\ Generation3\ CH3=500
 TIM8.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM8.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM8.ClockDivision=TIM_CLOCKDIVISION_DIV4
-TIM8.IPParameters=Pulse-PWM Generation1 CH1,OCIdleState_1-PWM Generation1 CH1,Period,Prescaler,OCPolarity_2-PWM Generation2 CH2,Pulse-PWM Generation3 CH3,ClockDivision,OCIdleState_3-PWM Generation3 CH3,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,OCPolarity_1-PWM Generation1 CH1,OCPolarity_3-PWM Generation3 CH3,Pulse-PWM Generation2 CH2,OCIdleState_2-PWM Generation2 CH2
+TIM8.IPParameters=Pulse-PWM Generation1 CH1,OCIdleState_1-PWM Generation1 CH1,Period,Prescaler,OCPolarity_2-PWM Generation2 CH2,Pulse-PWM Generation3 CH3,ClockDivision,Channel-PWM Generation2 CH2,OCIdleState_3-PWM Generation3 CH3,Channel-PWM Generation3 CH3,OCPolarity_1-PWM Generation1 CH1,OCPolarity_3-PWM Generation3 CH3,Pulse-PWM Generation2 CH2,OCIdleState_2-PWM Generation2 CH2
 TIM8.OCIdleState_1-PWM\ Generation1\ CH1=TIM_OCIDLESTATE_SET
 TIM8.OCIdleState_2-PWM\ Generation2\ CH2=TIM_OCIDLESTATE_SET
 TIM8.OCIdleState_3-PWM\ Generation3\ CH3=TIM_OCIDLESTATE_SET
