--- a/Configuration/Configuration.ioc
+++ b/Configuration/Configuration.ioc
@@ -1,34 +1,32 @@
 #MicroXplorer Configuration settings - do not modify
-#Tue Sep 16 02:08:33 CDT 2014
+#Mon Sep 29 21:51:33 CDT 2014
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_10
 ADC1.IPParameters=Channel-0\#ChannelRegularConversion,master,NbrOfConversionFlag
 ADC1.NbrOfConversionFlag=1
 ADC1.master=1
 Dma.Request0=SPI3_RX
 Dma.Request1=SPI3_TX
-Dma.Request10=SPI5_RX
-Dma.Request11=SPI6_RX
-Dma.Request12=SPI6_TX
+Dma.Request10=SPI6_TX
 Dma.Request2=SPI2_RX
 Dma.Request3=SPI2_TX
-Dma.Request4=USART2_TX
-Dma.Request5=USART2_RX
-Dma.Request6=SPI4_RX
-Dma.Request7=SPI4_TX
-Dma.Request8=SPI1_RX
-Dma.Request9=SPI5_TX
-Dma.RequestsNb=13
-Dma.SPI1_RX.8.Channel=DMA_CHANNEL_3
-Dma.SPI1_RX.8.Direction=DMA_PERIPH_TO_MEMORY
-Dma.SPI1_RX.8.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.SPI1_RX.8.Instance=DMA2_Stream2
-Dma.SPI1_RX.8.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI1_RX.8.MemInc=DMA_MINC_ENABLE
-Dma.SPI1_RX.8.Mode=DMA_NORMAL
-Dma.SPI1_RX.8.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI1_RX.8.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI1_RX.8.Priority=DMA_PRIORITY_HIGH
-Dma.SPI1_RX.8.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.Request4=SPI4_RX
+Dma.Request5=SPI4_TX
+Dma.Request6=SPI1_RX
+Dma.Request7=SPI5_TX
+Dma.Request8=SPI5_RX
+Dma.Request9=SPI6_RX
+Dma.RequestsNb=11
+Dma.SPI1_RX.6.Channel=DMA_CHANNEL_3
+Dma.SPI1_RX.6.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI1_RX.6.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI1_RX.6.Instance=DMA2_Stream2
+Dma.SPI1_RX.6.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI1_RX.6.MemInc=DMA_MINC_ENABLE
+Dma.SPI1_RX.6.Mode=DMA_NORMAL
+Dma.SPI1_RX.6.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI1_RX.6.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI1_RX.6.Priority=DMA_PRIORITY_HIGH
+Dma.SPI1_RX.6.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.SPI2_RX.2.Channel=DMA_CHANNEL_0
 Dma.SPI2_RX.2.Direction=DMA_PERIPH_TO_MEMORY
 Dma.SPI2_RX.2.FIFOMode=DMA_FIFOMODE_DISABLE
@@ -73,94 +71,72 @@ Dma.SPI3_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.SPI3_TX.1.PeriphInc=DMA_PINC_DISABLE
 Dma.SPI3_TX.1.Priority=DMA_PRIORITY_HIGH
 Dma.SPI3_TX.1.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.SPI4_RX.6.Channel=DMA_CHANNEL_4
-Dma.SPI4_RX.6.Direction=DMA_PERIPH_TO_MEMORY
-Dma.SPI4_RX.6.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.SPI4_RX.6.Instance=DMA2_Stream0
-Dma.SPI4_RX.6.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI4_RX.6.MemInc=DMA_MINC_ENABLE
-Dma.SPI4_RX.6.Mode=DMA_NORMAL
-Dma.SPI4_RX.6.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI4_RX.6.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI4_RX.6.Priority=DMA_PRIORITY_MEDIUM
-Dma.SPI4_RX.6.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.SPI4_TX.7.Channel=DMA_CHANNEL_4
-Dma.SPI4_TX.7.Direction=DMA_MEMORY_TO_PERIPH
-Dma.SPI4_TX.7.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.SPI4_TX.7.Instance=DMA2_Stream1
-Dma.SPI4_TX.7.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI4_TX.7.MemInc=DMA_MINC_ENABLE
-Dma.SPI4_TX.7.Mode=DMA_NORMAL
-Dma.SPI4_TX.7.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI4_TX.7.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI4_TX.7.Priority=DMA_PRIORITY_HIGH
-Dma.SPI4_TX.7.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.SPI5_RX.10.Channel=DMA_CHANNEL_2
-Dma.SPI5_RX.10.Direction=DMA_PERIPH_TO_MEMORY
-Dma.SPI5_RX.10.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.SPI5_RX.10.Instance=DMA2_Stream3
-Dma.SPI5_RX.10.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI5_RX.10.MemInc=DMA_MINC_ENABLE
-Dma.SPI5_RX.10.Mode=DMA_NORMAL
-Dma.SPI5_RX.10.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI5_RX.10.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI5_RX.10.Priority=DMA_PRIORITY_HIGH
-Dma.SPI5_RX.10.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.SPI5_TX.9.Channel=DMA_CHANNEL_2
-Dma.SPI5_TX.9.Direction=DMA_MEMORY_TO_PERIPH
-Dma.SPI5_TX.9.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.SPI5_TX.9.Instance=DMA2_Stream4
-Dma.SPI5_TX.9.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI5_TX.9.MemInc=DMA_MINC_ENABLE
-Dma.SPI5_TX.9.Mode=DMA_NORMAL
-Dma.SPI5_TX.9.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI5_TX.9.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI5_TX.9.Priority=DMA_PRIORITY_MEDIUM
-Dma.SPI5_TX.9.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.SPI6_RX.11.Channel=DMA_CHANNEL_1
-Dma.SPI6_RX.11.Direction=DMA_PERIPH_TO_MEMORY
-Dma.SPI6_RX.11.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.SPI6_RX.11.Instance=DMA2_Stream6
-Dma.SPI6_RX.11.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI6_RX.11.MemInc=DMA_MINC_ENABLE
-Dma.SPI6_RX.11.Mode=DMA_NORMAL
-Dma.SPI6_RX.11.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI6_RX.11.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI6_RX.11.Priority=DMA_PRIORITY_HIGH
-Dma.SPI6_RX.11.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.SPI6_TX.12.Channel=DMA_CHANNEL_1
-Dma.SPI6_TX.12.Direction=DMA_MEMORY_TO_PERIPH
-Dma.SPI6_TX.12.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.SPI6_TX.12.Instance=DMA2_Stream5
-Dma.SPI6_TX.12.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI6_TX.12.MemInc=DMA_MINC_ENABLE
-Dma.SPI6_TX.12.Mode=DMA_NORMAL
-Dma.SPI6_TX.12.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI6_TX.12.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI6_TX.12.Priority=DMA_PRIORITY_MEDIUM
-Dma.SPI6_TX.12.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.USART2_RX.5.Channel=DMA_CHANNEL_4
-Dma.USART2_RX.5.Direction=DMA_PERIPH_TO_MEMORY
-Dma.USART2_RX.5.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.USART2_RX.5.Instance=DMA1_Stream5
-Dma.USART2_RX.5.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART2_RX.5.MemInc=DMA_MINC_ENABLE
-Dma.USART2_RX.5.Mode=DMA_NORMAL
-Dma.USART2_RX.5.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART2_RX.5.PeriphInc=DMA_PINC_DISABLE
-Dma.USART2_RX.5.Priority=DMA_PRIORITY_MEDIUM
-Dma.USART2_RX.5.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.USART2_TX.4.Channel=DMA_CHANNEL_4
-Dma.USART2_TX.4.Direction=DMA_MEMORY_TO_PERIPH
-Dma.USART2_TX.4.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.USART2_TX.4.Instance=DMA1_Stream6
-Dma.USART2_TX.4.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART2_TX.4.MemInc=DMA_MINC_ENABLE
-Dma.USART2_TX.4.Mode=DMA_NORMAL
-Dma.USART2_TX.4.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART2_TX.4.PeriphInc=DMA_PINC_DISABLE
-Dma.USART2_TX.4.Priority=DMA_PRIORITY_VERY_HIGH
-Dma.USART2_TX.4.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.SPI4_RX.4.Channel=DMA_CHANNEL_4
+Dma.SPI4_RX.4.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI4_RX.4.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI4_RX.4.Instance=DMA2_Stream0
+Dma.SPI4_RX.4.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI4_RX.4.MemInc=DMA_MINC_ENABLE
+Dma.SPI4_RX.4.Mode=DMA_NORMAL
+Dma.SPI4_RX.4.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI4_RX.4.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI4_RX.4.Priority=DMA_PRIORITY_MEDIUM
+Dma.SPI4_RX.4.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.SPI4_TX.5.Channel=DMA_CHANNEL_4
+Dma.SPI4_TX.5.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI4_TX.5.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI4_TX.5.Instance=DMA2_Stream1
+Dma.SPI4_TX.5.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI4_TX.5.MemInc=DMA_MINC_ENABLE
+Dma.SPI4_TX.5.Mode=DMA_NORMAL
+Dma.SPI4_TX.5.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI4_TX.5.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI4_TX.5.Priority=DMA_PRIORITY_HIGH
+Dma.SPI4_TX.5.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.SPI5_RX.8.Channel=DMA_CHANNEL_2
+Dma.SPI5_RX.8.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI5_RX.8.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI5_RX.8.Instance=DMA2_Stream3
+Dma.SPI5_RX.8.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI5_RX.8.MemInc=DMA_MINC_ENABLE
+Dma.SPI5_RX.8.Mode=DMA_NORMAL
+Dma.SPI5_RX.8.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI5_RX.8.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI5_RX.8.Priority=DMA_PRIORITY_HIGH
+Dma.SPI5_RX.8.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.SPI5_TX.7.Channel=DMA_CHANNEL_2
+Dma.SPI5_TX.7.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI5_TX.7.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI5_TX.7.Instance=DMA2_Stream4
+Dma.SPI5_TX.7.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI5_TX.7.MemInc=DMA_MINC_ENABLE
+Dma.SPI5_TX.7.Mode=DMA_NORMAL
+Dma.SPI5_TX.7.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI5_TX.7.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI5_TX.7.Priority=DMA_PRIORITY_MEDIUM
+Dma.SPI5_TX.7.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.SPI6_RX.9.Channel=DMA_CHANNEL_1
+Dma.SPI6_RX.9.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI6_RX.9.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI6_RX.9.Instance=DMA2_Stream6
+Dma.SPI6_RX.9.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI6_RX.9.MemInc=DMA_MINC_ENABLE
+Dma.SPI6_RX.9.Mode=DMA_NORMAL
+Dma.SPI6_RX.9.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI6_RX.9.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI6_RX.9.Priority=DMA_PRIORITY_HIGH
+Dma.SPI6_RX.9.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.SPI6_TX.10.Channel=DMA_CHANNEL_1
+Dma.SPI6_TX.10.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI6_TX.10.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI6_TX.10.Instance=DMA2_Stream5
+Dma.SPI6_TX.10.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI6_TX.10.MemInc=DMA_MINC_ENABLE
+Dma.SPI6_TX.10.Mode=DMA_NORMAL
+Dma.SPI6_TX.10.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI6_TX.10.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI6_TX.10.Priority=DMA_PRIORITY_MEDIUM
+Dma.SPI6_TX.10.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=4
 KeepUserPlacement=false
 Mcu.Family=STM32F4
@@ -174,7 +150,7 @@ Mcu.IP14=TIM3
 Mcu.IP15=TIM4
 Mcu.IP16=TIM5
 Mcu.IP17=TIM8
-Mcu.IP18=USART2
+Mcu.IP18=USART3
 Mcu.IP19=USB_OTG_FS
 Mcu.IP2=I2C2
 Mcu.IP3=I2C3
@@ -190,12 +166,14 @@ Mcu.Package=LQFP176
 Mcu.Pin0=PE2
 Mcu.Pin1=PE3
 Mcu.Pin10=PF0
-Mcu.Pin100=PI7
-Mcu.Pin101=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin102=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin103=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin104=VP_TIM5_VS_ClockSourceINT
-Mcu.Pin105=VP_TIM8_VS_ClockSourceINT
+Mcu.Pin100=PI5
+Mcu.Pin101=PI6
+Mcu.Pin102=PI7
+Mcu.Pin103=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin104=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin105=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin106=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin107=VP_TIM8_VS_ClockSourceINT
 Mcu.Pin11=PF1
 Mcu.Pin12=PF2
 Mcu.Pin13=PF3
@@ -226,74 +204,74 @@ Mcu.Pin35=PE9
 Mcu.Pin36=PE11
 Mcu.Pin37=PE13
 Mcu.Pin38=PE14
-Mcu.Pin39=PH7
+Mcu.Pin39=PB10
 Mcu.Pin4=PE6
-Mcu.Pin40=PH8
-Mcu.Pin41=PH10
-Mcu.Pin42=PH11
-Mcu.Pin43=PH12
-Mcu.Pin44=PB13
-Mcu.Pin45=PB14
-Mcu.Pin46=PB15
-Mcu.Pin47=PD8
-Mcu.Pin48=PD9
-Mcu.Pin49=PD10
+Mcu.Pin40=PB11
+Mcu.Pin41=PH7
+Mcu.Pin42=PH8
+Mcu.Pin43=PH10
+Mcu.Pin44=PH11
+Mcu.Pin45=PH12
+Mcu.Pin46=PB12
+Mcu.Pin47=PB13
+Mcu.Pin48=PB14
+Mcu.Pin49=PB15
 Mcu.Pin5=PI8
-Mcu.Pin50=PD11
-Mcu.Pin51=PD12
-Mcu.Pin52=PD13
-Mcu.Pin53=PD14
-Mcu.Pin54=PG2
-Mcu.Pin55=PG3
-Mcu.Pin56=PC6
-Mcu.Pin57=PC7
-Mcu.Pin58=PC8
-Mcu.Pin59=PC9
+Mcu.Pin50=PD8
+Mcu.Pin51=PD9
+Mcu.Pin52=PD10
+Mcu.Pin53=PD11
+Mcu.Pin54=PD12
+Mcu.Pin55=PD13
+Mcu.Pin56=PD14
+Mcu.Pin57=PG2
+Mcu.Pin58=PG3
+Mcu.Pin59=PC6
 Mcu.Pin6=PC13
-Mcu.Pin60=PA9
-Mcu.Pin61=PA10
-Mcu.Pin62=PA11
-Mcu.Pin63=PA12
-Mcu.Pin64=PA13
-Mcu.Pin65=PH13
-Mcu.Pin66=PH14
-Mcu.Pin67=PH15
-Mcu.Pin68=PI1
-Mcu.Pin69=PI3
+Mcu.Pin60=PC7
+Mcu.Pin61=PC8
+Mcu.Pin62=PC9
+Mcu.Pin63=PA9
+Mcu.Pin64=PA10
+Mcu.Pin65=PA11
+Mcu.Pin66=PA12
+Mcu.Pin67=PA13
+Mcu.Pin68=PH13
+Mcu.Pin69=PH14
 Mcu.Pin7=PI9
-Mcu.Pin70=PA14
-Mcu.Pin71=PA15
-Mcu.Pin72=PC10
-Mcu.Pin73=PC11
-Mcu.Pin74=PC12
-Mcu.Pin75=PD0
-Mcu.Pin76=PD1
-Mcu.Pin77=PD2
-Mcu.Pin78=PD3
-Mcu.Pin79=PD4
+Mcu.Pin70=PH15
+Mcu.Pin71=PI1
+Mcu.Pin72=PI3
+Mcu.Pin73=PA14
+Mcu.Pin74=PA15
+Mcu.Pin75=PC10
+Mcu.Pin76=PC11
+Mcu.Pin77=PC12
+Mcu.Pin78=PD0
+Mcu.Pin79=PD1
 Mcu.Pin8=PI10
-Mcu.Pin80=PD5
-Mcu.Pin81=PD6
-Mcu.Pin82=PD7
-Mcu.Pin83=PG9
-Mcu.Pin84=PG10
-Mcu.Pin85=PG11
-Mcu.Pin86=PG12
-Mcu.Pin87=PG13
-Mcu.Pin88=PG14
-Mcu.Pin89=PG15
+Mcu.Pin80=PD2
+Mcu.Pin81=PD3
+Mcu.Pin82=PD4
+Mcu.Pin83=PD5
+Mcu.Pin84=PD7
+Mcu.Pin85=PG9
+Mcu.Pin86=PG10
+Mcu.Pin87=PG11
+Mcu.Pin88=PG12
+Mcu.Pin89=PG13
 Mcu.Pin9=PI11
-Mcu.Pin90=PB3
-Mcu.Pin91=PB4
-Mcu.Pin92=PB5
-Mcu.Pin93=PB8
-Mcu.Pin94=PB9
-Mcu.Pin95=PE0
-Mcu.Pin96=PE1
-Mcu.Pin97=PI4
-Mcu.Pin98=PI5
-Mcu.Pin99=PI6
-Mcu.PinsNb=106
+Mcu.Pin90=PG14
+Mcu.Pin91=PG15
+Mcu.Pin92=PB3
+Mcu.Pin93=PB4
+Mcu.Pin94=PB5
+Mcu.Pin95=PB8
+Mcu.Pin96=PB9
+Mcu.Pin97=PE0
+Mcu.Pin98=PE1
+Mcu.Pin99=PI4
+Mcu.PinsNb=108
 Mcu.UserName=STM32F427IGTx
 NVIC.DMA1_Stream0_IRQn=true\:1\:4
 NVIC.DMA1_Stream3_IRQn=true\:1\:4
@@ -356,6 +334,12 @@ PA7.Signal=SPI1_MOSI
 PA9.Locked=true
 PA9.Mode=Activate_VBUS
 PA9.Signal=USB_OTG_FS_VBUS
+PB10.Mode=Synchronous
+PB10.Signal=USART3_TX
+PB11.Mode=Synchronous
+PB11.Signal=USART3_RX
+PB12.Mode=Synchronous
+PB12.Signal=USART3_CK
 PB13.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
 PB13.GPIO_Mode=GPIO_MODE_AF_PP
 PB13.GPIO_PuPd=GPIO_NOPULL
@@ -528,14 +512,12 @@ PD2.GPIO_Mode=GPIO_MODE_INPUT
 PD2.GPIO_PuPd=GPIO_PULLDOWN
 PD2.Locked=true
 PD2.Signal=GPIO_Input
-PD3.Mode=CTS_RTS
-PD3.Signal=USART2_CTS
-PD4.Mode=CTS_RTS
-PD4.Signal=USART2_RTS
-PD5.Mode=Asynchronous
-PD5.Signal=USART2_TX
-PD6.Mode=Asynchronous
-PD6.Signal=USART2_RX
+PD3.Locked=true
+PD3.Signal=GPIO_Output
+PD4.Locked=true
+PD4.Signal=GPIO_Input
+PD5.Locked=true
+PD5.Signal=GPIO_Output
 PD7.GPIOParameters=GPIO_PuPd,GPIO_Mode
 PD7.GPIO_Mode=GPIO_MODE_INPUT
 PD7.GPIO_PuPd=GPIO_PULLDOWN
@@ -1015,6 +997,8 @@ TIM8.Prescaler=1000
 TIM8.Pulse-PWM\ Generation1\ CH1=500
 TIM8.Pulse-PWM\ Generation2\ CH2=500
 TIM8.Pulse-PWM\ Generation3\ CH3=500
+USART3.IPParameters=VirtualMode-Synchronous
+USART3.VirtualMode-Synchronous=VM_SYNC
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
